# letterbash

./: .gitignore  README.md  flake.nix  pyproject.toml
src/letterbash/: __init__.py  cli.py  selection.py  watchlist.py
tests/: test_cli.py  test_selection.py  test_watchlist.py
